Added Password realted

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=WIN-45H7NV850H9\\SQLEXPRESS;Database=AppointmentManagementDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSsl": "true",
+    "FromEmail": "tsolusoft@gmail.com",
+    "FromName": "Appointment Management System",
+    "Username": "tsolusoft@gmail.com",
+    "Password": "Testsolusoft@#123"
   }
 }
